card text no longer overlapping when window resized

--- a/src/Components/Home/FeaturedDaycare/FeaturedDaycare.css
+++ b/src/Components/Home/FeaturedDaycare/FeaturedDaycare.css
@@ -16,14 +16,11 @@ h5{
 }
 
 .card{
-  /* max-height: 350px; */
   overflow-y: scroll;
 }
 
 .card-header{
-  height: 4rem;
   padding-top: 10px;
-  text-align: center;
 }
 
 .cardImg{
